[package]
name = "tapedeck"
version = "0.1.0"
authors = ["Billy Lindeman <billylindeman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = { git = "https://github.com/billylindeman/rust-headless-chrome" }
pretty_env_logger = "0.4.0"
subprocess = "0.2.8"
x11 = "2.19.1"
x11rb = { git = "https://github.com/psychon/x11rb" }


[[bin]]
name = "tapedeck"
src = "./bin/main.rs"

