[package]
name = "tapedeck"
version = "0.1.0"
authors = ["Billy Lindeman <billylindeman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = { git = "https://github.com/billylindeman/rust-headless-chrome" }
pretty_env_logger = "0.4.0"
subprocess = "0.2.8"
x11 = "2.19.1"
x11rb = { git = "https://github.com/psychon/x11rb" }

glib = "0.10.3"
gst = { package = "gstreamer", version = "0.16", features = ["v1_14"] }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.16" }
gst-sdp = { package = "gstreamer-sdp", version = "0.16", features = ["v1_14"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
url = "2.2.1"
log = "0.4.14"



#[[bin]]
#name = "tapedeck"
#path = "./bin/main.rs"

